--- a/skeleton_css/study_mode.css
+++ b/skeleton_css/study_mode.css
@@ -1,6 +1,6 @@
 .mdl-card.mdl-shadow--2dp {
     width: 100%;
-    height: 100%;
+    height: 75%;
     transition: transform 1s;
     transform-style: preserve-3d;
     -webkit-transform-origin: 50% 50%;
@@ -8,7 +8,7 @@
 }
 .mdl-card > .mdl-card__title {
     color: #fff;
-    height: 176px;
+    height: 90%;
     background: #2962FF;
 }
 body {
@@ -31,3 +31,12 @@ body {
     transform: rotateY(180deg);
 }
 
+#answer{
+    display: none;
+    -webkit-transform: scale(-1, 1);
+
+}
+
+#question{
+    display: block;
+}
