--- a/client/src/components/stackOverview.css
+++ b/client/src/components/stackOverview.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media all and (min-width: 768px) {
     .cardStackList {
         display: -webkit-flex;
         display: flex;
@@ -12,6 +12,7 @@
         height: 20%;
         min-height: 15%;
         margin: 1em;
+        background-color: #E0F2F1;
 
         box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
         /*padding: 0;*/
@@ -34,8 +35,8 @@
         padding: 0.75em;
         height: 10rem;
     }
-
 }
+
 
 @media (max-width: 667px) {
     .cardStackList {
@@ -52,18 +53,20 @@
         min-height: 15%;
         margin: 1em;
         box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
 
     }
 }
 
-/* Media query for smaller screen sizes*/
-@media (min-width: 375px) and (max-width: 667px) {
+/* PORTRAIT MODE: Media query for smaller screen sizes up to tablet (768 px) */
+@media (min-width: 375px) and (max-width: 768px) and (orientation: Portrait) {
     .cardStackList {
         display: -webkit-flex;
         display: flex;
         flex-flow: row wrap;
         -webkit-flex-flow: row wrap;
-        justify-content: flex-start;
+        justify-content: center;
+
     }
 
     .cardStackList > div {
@@ -72,6 +75,7 @@
         min-height: 3%;
         margin: 1em;
         box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
     }
     .cardHeader {
         font-size: 0.75em;
@@ -82,6 +86,35 @@
         height: 10rem;
     }
 }
+/* LANDSCAPE MODE + PORTRAIT W/ KEYBOARD OPENED */
+@media (min-width: 375px) and (max-width: 768px) and (orientation: Landscape) {
+    .cardStackList {
+        display: -webkit-flex;
+        display: flex;
+        flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
+        justify-content: center;
+
+    }
+
+    .cardStackList > div {
+        width: 20vw;
+        height: 6%;
+        min-height: 3%;
+        margin: 1em;
+        box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
+    }
+    .cardHeader {
+        font-size: 0.75em;
+        font-weight: bold;
+        background-color: teal;
+        color: white;
+        padding: 0.75em;
+        height: 10rem;
+    }
+}
+
 @media (max-width: 600px) {
     .cardStackList {
         display: -webkit-flex;
@@ -97,6 +130,7 @@
         min-height: 3%;
         margin: 1em;
         box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
     }
     .cardHeader {
         font-size: 1em;
@@ -108,6 +142,7 @@
     }
 }
 
+/* PORTRAIT MODE: NO KEYBOARD */
 @media (min-device-width: 320px) and (max-device-width: 480px) {
     .cardStackList {
         display: -webkit-flex;
@@ -122,9 +157,28 @@
         min-height: 3%;
         margin: 1em;
         box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
     }
 }
 
+/* LANDSCAPE MODE + PORTRAIT MODE W/ KEYBOARD */
+@media (min-device-width: 320px) and (max-device-width: 480px) and (orientation: Landscape) {
+    .cardStackList {
+        display: -webkit-flex;
+        display: flex;
+        flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
+        justify-content: center;
+    }
+    .cardStackList > div {
+        width: 50vw;
+        height: 6%;
+        min-height: 3%;
+        margin: 1em;
+        box-shadow: rgba(0, 0, 0, 0.50) 0px 2px 12px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        background-color: #E0F2F1;
+    }
+}
 
 .stackActions {
     display: -webkit-flex;
@@ -132,16 +186,21 @@
     flex-flow: row wrap;
     -webkit-flex-flow: row wrap;
     justify-content: space-around;
-    margin: 1em;
 }
 
 .stackActions > div  {
     margin: 1em;
 }
 
+.studyButton > a {
+    background-color: #ffb499 !important;
+    color: #26A69A !important;
+}
+.stackActionsAdd > button {
+    background-color: #26A69A !important;
+}
 .contentCopy {
-    height: 3em;
-    width: 3em;
+    background-color: #26A69A !important;
 }
 
 .stackHeader {
@@ -151,10 +210,21 @@
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
+    background-color: #26A69A !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
 }
 
 .stackHeader > span {
     margin: 0.2em;
+    color: white;
+}
+
+.chip {
+    background-color: white !important;
+}
+.chip > div {
+    background-color: #ffb499 !important;
 }
 
 
