--- a/client/src/components/stackOverview.css
+++ b/client/src/components/stackOverview.css
@@ -227,5 +227,12 @@
     background-color: #ffb499 !important;
 }
 
+.loadingIcon {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    align-items: center;
+}
 
 
