Fixed the fill color teal issue with the content copy icon, so now, the icon is teal and not the entire div.

--- a/client/src/components/stackOverview.css
+++ b/client/src/components/stackOverview.css
@@ -200,7 +200,7 @@
     background-color: #26A69A !important;
 }
 .contentCopy {
-    background-color: #26A69A !important;
+    color: #26A69A !important;
 }
 
 .stackHeader {
