--- a/client/src/components/styles/singleCard.css
+++ b/client/src/components/styles/singleCard.css
@@ -73,7 +73,7 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    position: relative;
+    position: absolute;
     margin: 0;
 }
 #questionCard.flippedCard{
@@ -86,7 +86,6 @@
 #questionCard.flippedCard > .back {
     -webkit-transition: .3s;
     transition: .3s;
-    visibility: hidden;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
