--- a/client/src/components/styles/singleCard.css
+++ b/client/src/components/styles/singleCard.css
@@ -63,6 +63,7 @@
     margin: 0;
 }
 #answer{
+    visibility: visible;
     transform: rotateY(180deg);
     -webkit-transform: rotateY( 180deg );
     -moz-transform: rotateY( 180deg );
@@ -82,16 +83,6 @@
     -moz-transform: rotateY( 180deg );
     -o-transform: rotateY( 180deg );
     text-align: center;
-}
-#questionCard.flippedCard > .back {
-    -webkit-transition: .3s;
-    transition: .3s;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
 }
 #FlipMsg {
     -webkit-transform: rotateY( 180deg );
