--- a/client/src/components/styles/singleCard.css
+++ b/client/src/components/styles/singleCard.css
@@ -54,7 +54,12 @@
     -ms-flex-pack: center;
     justify-content: center;
     z-index: -1;
-    background-color: lightgrey;
+    background-color: rgb(240, 240, 240);
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    border-radius: 2px;
 }
 
 #question{
