--- a/client/src/components/styles/singleCard.css
+++ b/client/src/components/styles/singleCard.css
@@ -48,6 +48,9 @@
     -ms-flex-pack: center;
     justify-content: center;
     z-index: -1;
+    background-color: rgb(240, 240, 240);
+    box-sizing: border-box;
+    border: red 6px solid;
 }
 
 #question{
@@ -67,6 +70,7 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
     border-radius: 2px;
+    border: blue 6px solid;
 }
 #answer{
     width: 100%;
@@ -81,6 +85,7 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
     border-radius: 2px;
+    border: green 6px solid;
 }
 #questionCard.flippedCard{
     transform: rotateY(180deg);
