--- a/client/src/components/styles/singleCard.css
+++ b/client/src/components/styles/singleCard.css
@@ -3,6 +3,7 @@
     -webkit-perspective: 800px;
     perspective: 800px;
     height: 67vh;
+    background-color: rgb(240,240,240);
 }
 
 .centered {
@@ -48,6 +49,7 @@
     -ms-flex-pack: center;
     justify-content: center;
     background-color: transparent;
+    box-shadow: rgba(0, 0, 0, 0.24) 0 2px 12px, rgba(0, 0, 0, 0.12) 0 1px 4px;
 }
 
 #question{
