home page background now f0f0f0 and card bg is now white

--- a/client/src/components/styles/footer.css
+++ b/client/src/components/styles/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color: teal;
+    background-color: rgb(0, 121, 107);
     color: white;
     font-family: Roboto, sans-serif;
     text-align: center;
