Edited 'landing' to 'Landing' to be more consistent with app's naming conventions for components

--- a/client/src/components/styles/log_in.css
+++ b/client/src/components/styles/log_in.css
@@ -9,3 +9,13 @@ input:-webkit-autofill {
     -webkit-animation-name: autofill;
     -webkit-animation-fill-mode: both;
 }
+
+@media (max-width: 500px) {
+    .loginFormFieldsDiv {
+        display: flex;
+        display: -webkit-flex !important;
+        flex-flow: row nowrap;
+        -webkit-flex-flow: row nowrap;
+
+    }
+}
