registration component seems to be done for its own component

--- a/client/src/components/styles/signReg.css
+++ b/client/src/components/styles/signReg.css
@@ -7,3 +7,12 @@
 .logResetContainer{
     margin: 1em;
 }
+
+/*Apply for small devices
+* The Registration component on /register should beccome whole width of screen
+*/
+@media (max-width: 480px){
+    .paperContainer{
+        width: 100% !important;
+    }
+}
