login is now wide for small screens. and persistent login is there for login component, i think

--- a/client/src/components/styles/signReg.css
+++ b/client/src/components/styles/signReg.css
@@ -15,4 +15,8 @@
     .paperContainer{
         width: 100% !important;
     }
+
+    .loginComponentOnly{
+        width: 100% !important;
+    }
 }
