landing page appears to work well

--- a/client/src/components/styles/popUpComponent.css
+++ b/client/src/components/styles/popUpComponent.css
@@ -13,10 +13,10 @@ the login folder
 }
 
 
-.loginContent{
+.miniLoginContent{
     border:5px solid black;
 }
 
-.loginOverlay,.popUpOverlay{
+.miniLoginOverlay,.popUpOverlay{
     background: transparent !important;
 }
