--- a/client/src/components/styles/landingPage.css
+++ b/client/src/components/styles/landingPage.css
@@ -1,14 +1,14 @@
-#mobileIntro{
-    display: none;
-}
+/*#mobileIntro{*/
+    /*display: none;*/
+/*}*/
 
-@media (max-width: 600px) {
-    #Intro{
-        display: none;
-    }
-    #mobileIntro{
-        display: block;
-        font-size: 0.5em;
-        padding-top: 0.5em;
-    }
-}
+/*@media (max-width: 600px) {*/
+    /*#Intro{*/
+        /*display: none;*/
+    /*}*/
+    /*#mobileIntro{*/
+        /*display: block;*/
+        /*font-size: 0.5em;*/
+        /*padding-top: 0.5em;*/
+    /*}*/
+/*}*/
