--- a/client/src/components/styles/whyFlappsComp.css
+++ b/client/src/components/styles/whyFlappsComp.css
@@ -1,6 +1,6 @@
 .whyFlapp{
     width: 90vw;
-    background: white !important;
+    /*background: white !important;*/
     text-align: center;
     display: block;
     margin: 2em auto;
