--- a/client/src/components/styles/landing_page.css
+++ b/client/src/components/styles/landing_page.css
@@ -14,6 +14,7 @@
         padding-top: 1em;
         flex-direction: column;
         margin: 1em;
+        width: 100%;
     }
     .landingPageContentContainerDiv {
         flex: 1;
