--- a/client/src/components/styles/search.css
+++ b/client/src/components/styles/search.css
@@ -7,6 +7,9 @@
     white-space: normal !important;
     word-wrap: break-word !important;
 }
+.noMatchFound {
+    font-weight: 700;
+}
 
 @media only screen
 and (min-device-width: 320px)
