stckov origin now has hover/cursor so it is more intuitive that you should click it!

--- a/client/src/components/styles/stackOverview.css
+++ b/client/src/components/styles/stackOverview.css
@@ -267,3 +267,15 @@
     width: min-content;
     margin: 0 0 0 auto;
 }
+
+.stack-origin{
+    font-size: medium;
+    color: #5c69ff;
+}
+.origin-src{
+    /*color: #5c69ff;*/
+}
+.origin-src:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
